--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+body{
+    cursor: none;
+}
 .button {  
     position: relative;  
     overflow: hidden;  
@@ -9,7 +11,8 @@
     color: white;  
     border: 10px white;
     border-radius: 40px;  
-    cursor: pointer;  
+    box-shadow: 0px 0px 10px rgb(36, 36, 36),
+                0px 0px 20px rgb(33, 33, 33);            
 }  
 
 .button:hover::after {  
@@ -24,7 +27,7 @@
     transform: translate(-50%, -50%) scale(0);  
     animation: ripple 1s forwards;  
     animation-iteration-count: infinite ;
-    animation-duration: 2s;
+    animation-duration: 3s;
 }  
 
 @keyframes ripple {  
