--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 body{
-    cursor: none;
+    padding: 0%;
+    margin: 0%;
 }
 .button {  
     position: relative;  
@@ -68,6 +69,14 @@ body{
     }  
 }
 
+#myfont {
+ color: rgb(237, 59, 92);
+ font: bold
+  }
+ #googlefont{
+    font-family: "Fraunces", serif;
+ } 
+
 /*  navigation slide side bar*/  
 
 /* WebKit browsers (Chrome, Safari) */  
@@ -87,3 +96,4 @@ body{
   html {  
     scrollbar-color:  rgb(240, 63, 95), #f7aac0; /* Thumb color and track color */  
   }
+  
